--- a/styles/Layout/Layout.module.css
+++ b/styles/Layout/Layout.module.css
@@ -18,7 +18,7 @@
   grid-area: 2 / 2 / -1 / -1;
   padding: 20px;
   max-width: 80vw;
-  padding: 5vh;
+  padding: minmax(0px, 5vh);
 }
 
 @media screen and (max-width: 900px) {
