--- a/styles/Main/Fees/Pay.module.css
+++ b/styles/Main/Fees/Pay.module.css
@@ -74,6 +74,12 @@
   border-style: none none solid solid;
 }
 
+@media screen and (max-width: 700px) {
+  .payForm > button {
+    font-size: 12px;
+  }
+}
+
 @media screen and (max-width: 500px) {
   .payForm > button {
     font-size: 10px;
