--- a/styles/Main/Fees/FeeGraph.module.css
+++ b/styles/Main/Fees/FeeGraph.module.css
@@ -1,5 +1,8 @@
 .graphCont {
   background-color: cornsilk;
+  display: grid;
+  justify-content: center;
+  width: 60vw;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px,
     rgba(0, 0, 0, 0.05) 0px 5px 10px;
   padding: 1rem;
@@ -7,5 +10,25 @@
 
 .graphTitle {
   text-align: center;
-  color: tomato;
+  color: rgb(252, 41, 4);
+}
+
+.graph {
+  width: 40vw;
+  display: grid;
+  justify-content: center;
+}
+
+@media screen and (max-width: 800px) {
+  .graphCont {
+    width: 95vw;
+  }
+  .graphTitle {
+    text-align: center;
+    font-size: 20px;
+    color: rgb(252, 41, 4);
+  }
+  .graph {
+    width: 90vw;
+  }
 }
