--- a/styles/Layout/Layout.module.css
+++ b/styles/Layout/Layout.module.css
@@ -7,23 +7,29 @@
     rgba(255, 244, 169, 1) 0%,
     rgba(255, 244, 234, 1) 100.2%
   );
+
   width: 100vw;
   margin: 0;
 
   grid-template-columns: 20vw 80vw;
-  grid-template-rows: 8vh minmax(92vh, auto);
+  /* grid-template-rows: 8vh minmax(92vh, auto); */
 }
 
 .mainBody {
   grid-area: 2 / 2 / -1 / -1;
+  margin-top: 5vh;
   padding: 20px;
   max-width: 80vw;
   padding: minmax(0px, 5vh);
 }
 
+.sideBar {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
 @media screen and (max-width: 900px) {
   .mainBody {
-    grid-area: 2 / 1 / -1 / -1;
+    grid-area: 1/ 1 / -1 / -1;
     padding: 20px;
     max-width: 100vw;
     padding: 5vh;
