--- a/styles/Main/Student/AddForm.module.css
+++ b/styles/Main/Student/AddForm.module.css
@@ -1,7 +1,11 @@
 .form {
   width: auto;
-  padding: 1rem 2rem;
-  background-color: #00d4ff;
+  /* padding: 1rem 2rem; */
+  padding: 1rem;
+  margin-top: 3vh;
+  padding-top: 5vh;
+  /* background-color: #00d4ff; */
+  background-color: inherit;
   border-radius: 2rem;
   display: grid;
   width: 100%;
@@ -10,7 +14,7 @@
   align-content: center;
   gap: 2rem;
   text-align: center;
-  color: azure;
+  color: rgb(0, 3, 3);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -21,18 +25,34 @@
 }
 
 .formInput {
-  max-width: 17vw;
-  background-color: #5de2fc;
+  max-width: 27vw;
+  /* background-color: #5de2fc; */
+  background-color: inherit;
   border-radius: 0.5rem;
   padding: 0.2rem;
 }
 
+.inputCont {
+  width: 70vw;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  text-align: left;
+}
+
 .inputdiv {
   color: black;
-  display: flex;
+  display: grid;
+
+  grid-template-columns: 49% 1% 50%;
   justify-content: center;
   width: 100%;
   gap: 1rem;
+}
+
+.formInput {
+  padding: 0.5vw;
+  text-align: center;
 }
 
 .inputCont {
@@ -42,10 +62,14 @@
   gap: 2rem;
 }
 
+.formInput::placeholder {
+  padding: 2vw;
+}
+
 .submitButton {
   color: black;
   /* border: 100px; */
-  background-color: aquamarine;
+  background-color: rgb(255, 255, 255);
   padding: 0.5rem;
   border-radius: 1rem;
   transition: all 0.5s;
@@ -53,7 +77,8 @@
 }
 
 .submitButton:hover {
-  background-color: rgb(65, 250, 188);
+  /* background-color: rgb(221, 252, 255); */
+  background-color: #b6f3ff;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
