--- a/styles/Layout/Layout.module.css
+++ b/styles/Layout/Layout.module.css
@@ -1,37 +1,27 @@
 .layoutContainer {
-  display: grid;
-  min-height: 100vh;
-  /* background-color: white; */
-  background-image: radial-gradient(
-    circle 400px at 6.8% 8.3%,
-    rgba(255, 244, 169, 1) 0%,
-    rgba(255, 244, 234, 1) 100.2%
-  );
-
   width: 100vw;
-  margin: 0;
-
-  grid-template-columns: 20vw 80vw;
-  /* grid-template-rows: 8vh minmax(92vh, auto); */
+  height: 100vh;
+  /* background-image: linear-gradient(
+    90.1deg,
+    rgba(84, 212, 228, 1) 0.2%,
+    rgba(68, 36, 164, 1) 99.9%
+  ); */
+  background-image: linear-gradient(
+    92.7deg,
+    rgba(245, 212, 212, 1) 8.5%,
+    rgba(252, 251, 224, 1) 90.2%
+  );
+  display: grid;
+  grid-template-columns: 20% 80%;
 }
 
-.mainBody {
-  grid-area: 2 / 2 / -1 / -1;
-  margin-top: 5vh;
-  padding: 20px;
-  max-width: 80vw;
-  padding: minmax(0px, 5vh);
+.mainContent {
+  grid-area: 1 / 2 / -1 / 3;
+  padding-top: 5vh;
 }
 
-.sideBar {
-  grid-area: 1 / 1 / 2 / 2;
-}
-
-@media screen and (max-width: 900px) {
-  .mainBody {
-    grid-area: 1/ 1 / -1 / -1;
-    padding: 20px;
-    max-width: 100vw;
-    padding: 5vh;
+@media screen and (max-width: 1000px) {
+  .layoutContainer {
+    grid-template-columns: 30% 70%;
   }
 }
