--- a/styles/Main/Student/AddForm.module.css
+++ b/styles/Main/Student/AddForm.module.css
@@ -8,7 +8,7 @@
   background-color: inherit;
   border-radius: 2rem;
   display: grid;
-  width: 100%;
+
   grid-template-columns: 100%;
   justify-content: center;
   align-content: center;
@@ -25,7 +25,7 @@
 }
 
 .formInput {
-  max-width: 27vw;
+  /* max-width: 27vw; */
   /* background-color: #5de2fc; */
   background-color: inherit;
   border-radius: 0.5rem;
