--- a/styles/Main/Fees/Pay.module.css
+++ b/styles/Main/Fees/Pay.module.css
@@ -2,6 +2,7 @@
   display: grid;
   margin-top: 50px;
   gap: 2rem;
+  margin: 2vh 2vw;
   grid-template-columns: minmax(200px, 38vw);
   align-content: center;
   justify-content: center;
@@ -18,6 +19,11 @@
   /* border-style: solid solid none none; */
   /* border-left: 3px rgb(64, 128, 1) solid; */
   /* border-bottom: 3px rgb(64, 128, 1) solid; */
+}
+
+.details {
+  padding-left: 2vw;
+  padding-top: 2vh;
 }
 
 .payForm {
