--- a/styles/Layout/Layout2/Layout2.module.css
+++ b/styles/Layout/Layout2/Layout2.module.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 10% 90%;
   justify-content: center;
+
   /* gap: 2.5rem; */
 }
 
@@ -16,13 +17,15 @@
   display: none;
   position: absolute;
   z-index: 1;
+  top: 4rem;
   left: 10vw;
 }
 
 .openIcon {
   position: relative;
-  left: 95vw;
-  /* top: -4vh; */
+
+  top: 4rem;
+
   z-index: 1;
 }
 
