--- a/styles/Main/Fees/PayForm.module.css
+++ b/styles/Main/Fees/PayForm.module.css
@@ -12,12 +12,16 @@
   grid-template-columns: 80% 10%;
   justify-content: left;
   gap: 0.2rem;
+  display: flex;
+  justify-content: center;
 }
 
 .checkCont > input {
   /* height: 50px; */
   /* width: 50px; */
-  width: 1rem;
+  width: 1.3rem;
+  background-color: inherit;
+  color: inherit;
 }
 
 .monthCont {
@@ -32,7 +36,7 @@
 }
 
 .data {
-  font-size: 30px;
+  /* font-size: 30px; */
 }
 
 .month > h3 {
@@ -41,75 +45,22 @@
 }
 
 .notPaid {
+  display: flex;
+  justify-content: center;
+  width: fit-content;
   background-color: rgb(255, 217, 217);
 }
 
 .paid {
+  display: flex;
+  justify-content: center;
+  width: fit-content;
   background-color: rgb(217, 247, 217);
 }
 
-@media screen and (max-width: 1300px) {
-  /* .data {
-    font-size: 20px;
-  } */
-
-  .monthCont {
-    margin-left: 20px;
-    width: 20vw;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  /* .data {
-    font-size: 15px;
-  } */
-
-  .monthCont {
-    margin-left: 20px;
-    width: 25vw;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .month > h3 {
-    font-size: 0.3rem;
-  }
-  .checkCont > input {
-    width: 4vw;
-  }
-  .monthCont {
-    margin-left: 15px;
-    width: 34vw;
-  }
-
-  /* .data {
-    font-size: 10px;
-  } */
-}
-
-@media screen and (max-width: 700px) {
-  .monthCont {
-    margin-left: 20px;
-    width: 33vw;
-  }
-}
-
-@media screen and (max-width: 570px) {
-  .data {
-    font-size: 20px;
-  }
-  .monthCont {
-    margin-left: 20px;
-    width: 33vw;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .data {
-    font-size: 15px;
-  }
-  .monthCont {
-    margin-left: 20px;
-    width: 33vw;
-  }
+.checked {
+  display: flex;
+  justify-content: center;
+  width: fit-content;
+  background-color: rgb(254, 234, 234);
 }
