Centered the Student Details under PayFee Option

--- a/styles/Layout/Layout2/Layout2.module.css
+++ b/styles/Layout/Layout2/Layout2.module.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 10% 90%;
   justify-content: center;
-
+  /* background-color: rgb(243, 237, 237); */
   /* gap: 2.5rem; */
 }
 
