--- a/styles/Layout/Layout2/SideBar.module.css
+++ b/styles/Layout/Layout2/SideBar.module.css
@@ -29,6 +29,13 @@
   /* margin-left: 1rem; */
   /* left: -10px; */
 }
+
+.sideBarList > button {
+  border: 0px;
+  background-color: inherit;
+  width: max-content;
+}
+
 .sideBarListItem:hover {
   cursor: pointer;
   color: rgb(33, 48, 38);
@@ -36,6 +43,29 @@
   background-color: rgb(133, 214, 130);
   /* position: fixed; */
 }
+
+.deepDiv {
+  position: absolute;
+  overflow: hidden;
+  left: 10vw;
+  margin-left: 5px;
+  width: 0;
+
+  transition: all 0.2s;
+}
+
+.wrapper:hover .deepDiv {
+  position: absolute;
+  left: 10vw;
+  margin-top: -50px;
+  margin-left: 5px;
+  width: 10vw;
+  padding-top: 20px;
+  z-index: -1;
+  height: 100vh;
+  background-color: inherit;
+}
+
 .sideBarListTitle {
   font-size: 20px;
   color: rgb(2, 95, 36);
@@ -49,12 +79,15 @@
 
   text-align: left;
 }
+
 .link {
   text-decoration: none;
 }
+
 .active {
   color: green;
 }
+
 .sideBarLogo {
   margin-left: 15px;
 }
