--- a/styles/Main/Fees/Pay.module.css
+++ b/styles/Main/Fees/Pay.module.css
@@ -8,8 +8,8 @@
   align-content: center;
   justify-content: center;
   padding-bottom: 20px;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  /* box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; */
 }
 
 .formCont {
